# rust-json-to-table

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: cli_test.rs
