[package]
name = "json_to_table"
version = "0.1.0"
authors = ["piqueras <ignacio.piqueras@silicon-gears.com>"]
edition = "2018"
description = "Creates an ASCII table out of a JSON specification"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
env_logger = "0.7"
log = "0.4"
thiserror = "1.0"
prettytable-rs = "0.8"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1"
tempfile = "3"
